# Avangard

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  _.env  _accounts.json  docker-compose.yaml
dash-templates/: Dockerfile  dash.json.template  main.py  out.json  panel.json.template
grafana/: grafana.ini
grafana/provisioning/dashboards/: main.yaml
grafana/provisioning/datasources/: main.yaml
src/: db.rs  lib.rs  main.rs  utils.rs
